--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">PUBG Tracker for Android</string>
+    <string name="app_name">PlayerUnknown Tracker</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_history">History</string>
+    <string name="title_statistics">Statistics</string>
+    <string name="current_rating">Current Rating:</string>
+    <string name="lorem_paragraph">Lorem ipsum dolor sit amet, ultricies arcu id neque, sit pretium id sed, a tristique dis felis ac. Tempus gravida natoque in, id quis dui porta sodales, vestibulum arcu vestibulum lectus ut, odio wisi itaque est. Condimentum amet ut volutpat vel, phasellus id rutrum porta, urna malesuada nibh arcu. Nulla ultrices provident turpis, sed fermentum dolore in, erat nulla enim felis cras.</string>
 </resources>
