--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="general_settings">General settings for stat tracking and application behavior</string>
     <string name="title_activity_settings_new">SettingsActivityNew</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_map">MapActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
